<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Empress Light</string>
    <string name="camera_permission_confirmation">This app demonstrates the usage of CameraView. In order to do that, it needs permission to access camera.</string>
    <string name="camera_permission_not_granted">Camera app cannot do anything without camera permission.</string>
    <string name="picture_taken">Picture taken</string>
    <string name="aspect_ratio">Aspect ratio</string>
    <string name="switch_flash">Switch flash</string>
    <string name="switch_camera">Switch camera</string>
    <string name="flash_auto">Flash auto</string>
    <string name="flash_off">Flash off</string>
    <string name="flash_on">Flash on</string>
    <string name="face_verify_text">Verify Your Face</string>
    <string name="add_person">Add</string>
    <string name="title_activity_add_person">AddPerson</string>


    <string name="register_activity_signup_button_text">Sign Up</string>
    <string name="register_activity_message_text">Sign Up and give attendance</string>
    <string name="register_activity_upload_profile_image">Capture your photo</string>
    <string name="register_activity_enter_employee_id_text">Enter Employee ID</string>
    <string name="register_activity_enter_password_text">Enter EMPRESS Password</string>
    <string name="login_activity_login_and_give_attendance_text">Login and give attendance</string>
    <string name="login_activity_login_button_text">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="employee_attendance_text">Employee Attendance</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apply">Apply</string>
    <string name="employeeName">Employee Name</string>
    <string name="startDateText">Start Date</string>
    <string name="endDateText">End Date</string>
    <string name="leaveReasonText">Leave Reason</string>
    <string name="select_leave_type">Select Leave Type</string>
    <string name="employee_report_text">Reports</string>
    <string name="employee_approval_text">Approvals</string>
    <string name="employee_text">Employee</string>
    <string name="employee_dashboard_text">Dashboard</string>
</resources>
