<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/leave_application_activity_rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LeaveApplicationActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/leave_application_activity_toolbar"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?android:attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/leave_application_activity_profileImage"
        android:src="@drawable/default_image"
        android:layout_marginStart="16dp"
        android:layout_below="@+id/leave_application_activity_toolbar"
        android:layout_width="60dp"
        android:layout_height="60dp" />

    <TextView
        android:id="@+id/leave_application_activity_profileName"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/leave_application_activity_toolbar"
        android:layout_toEndOf="@+id/leave_application_activity_profileImage"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/leave_application_activity_profileId"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/leave_application_activity_profileName"
        android:layout_toEndOf="@+id/leave_application_activity_profileImage"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/leave_application_activity_currentDate"
        android:layout_marginTop="5dp"
        android:layout_marginStart="16dp"
        android:layout_below="@+id/leave_application_activity_profileImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/leave_application_activity_currentDate"
        android:layout_above="@+id/button2"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leave_application_activity_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <RelativeLayout
                android:onClick="showLeaveType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/leave_application_activity_leaveTypeText"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_leave_type" />

                <ImageView
                    android:contentDescription="@string/app_name"
                    android:src="@mipmap/ic_down_arrow"
                    android:layout_toEndOf="@+id/leave_application_activity_leaveTypeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/leave_application_activity_employeeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/employeeName"
                    android:inputType="text"
                    android:paddingBottom="16dp"
                    android:paddingTop="5dp"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/leave_application_activity_leaveStartDate"
                    android:layout_width="match_parent"
                    android:focusable="false"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/startDateText"
                    android:inputType="date"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/leave_application_activity_leaveEndDate"
                    android:layout_width="match_parent"
                    android:focusable="false"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/endDateText"
                    android:inputType="date"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/leave_application_activity_leaveReason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/leaveReasonText"
                    android:inputType="text"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:onClick="apply"
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:background="@drawable/register_activity_signup_button_bg"
        android:text="@string/apply"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</RelativeLayout>









