<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.MainActivity"
    tools:showIn="@layout/app_bar_main">

   <LinearLayout
       android:padding="10dp"
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="match_parent">

      <LinearLayout
          android:baselineAligned="false"
          android:orientation="horizontal"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

          <LinearLayout
              android:onClick="employeeAttendance"
              android:layout_width="0dp"
              android:layout_weight="1"
              android:layout_height="170dp"
              android:gravity="center_vertical|center_horizontal"
              android:background="@drawable/main_dash_grid_button_bg"
              android:layout_marginTop="8dp"
              android:orientation="vertical">

              <ImageView
                  android:layout_marginTop="10dp"
                  android:contentDescription="@string/app_name"
                  android:src="@drawable/ic_attendance"
                  android:layout_width="100dp"
                  android:layout_height="100dp" />

              <TextView
                  android:layout_marginTop="10dp"
                  android:textColor="@color/black"
                  android:text="@string/employee_attendance_text"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content" />

          </LinearLayout>

          <LinearLayout
              android:onClick="gotoLeaveApplicationActivity"
              android:layout_width="0dp"
              android:layout_weight="1"
              android:layout_height="170dp"
              android:gravity="center_vertical|center_horizontal"
              android:layout_marginStart="8dp"
              android:background="@drawable/main_dash_grid_button_bg"
              android:layout_marginTop="8dp"
              android:orientation="vertical">

              <ImageView
                  android:layout_marginTop="10dp"
                  android:contentDescription="@string/app_name"
                  android:src="@drawable/ic_leave"
                  android:layout_width="100dp"
                  android:layout_height="100dp" />

              <TextView
                  android:layout_marginTop="10dp"
                  android:textColor="@color/black"
                  android:text="Leave Application"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content" />

          </LinearLayout>

      </LinearLayout>

       <LinearLayout
           android:baselineAligned="false"
           android:orientation="horizontal"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <LinearLayout
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="170dp"
               android:gravity="center_vertical|center_horizontal"
               android:background="@drawable/main_dash_grid_button_bg"
               android:layout_marginTop="8dp"
               android:orientation="vertical">

               <ImageView
                   android:layout_marginTop="10dp"
                   android:contentDescription="@string/app_name"
                   android:src="@drawable/ic_approvals"
                   android:layout_width="100dp"
                   android:layout_height="100dp" />

               <TextView
                   android:layout_marginTop="10dp"
                   android:textColor="@color/black"
                   android:text="@string/employee_approval_text"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />

           </LinearLayout>

           <LinearLayout
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="170dp"
               android:gravity="center_vertical|center_horizontal"
               android:layout_marginStart="8dp"
               android:background="@drawable/main_dash_grid_button_bg"
               android:layout_marginTop="8dp"
               android:orientation="vertical">

               <ImageView
                   android:layout_marginTop="10dp"
                   android:contentDescription="@string/app_name"
                   android:src="@drawable/ic_dashboard"
                   android:layout_width="100dp"
                   android:layout_height="100dp" />

               <TextView
                   android:layout_marginTop="10dp"
                   android:textColor="@color/black"
                   android:text="@string/employee_dashboard_text"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />

           </LinearLayout>

       </LinearLayout>

       <LinearLayout
           android:baselineAligned="false"
           android:orientation="horizontal"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <LinearLayout
               android:onClick="viewEmployeeProfile"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="170dp"
               android:gravity="center_vertical|center_horizontal"
               android:background="@drawable/main_dash_grid_button_bg"
               android:layout_marginTop="8dp"
               android:orientation="vertical">

               <ImageView
                   android:layout_marginTop="10dp"
                   android:contentDescription="@string/app_name"
                   android:src="@drawable/ic_employee"
                   android:layout_width="100dp"
                   android:layout_height="100dp" />

               <TextView
                   android:layout_marginTop="10dp"
                   android:textColor="@color/black"
                   android:text="@string/employee_text"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />

           </LinearLayout>

           <LinearLayout
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="170dp"
               android:gravity="center_vertical|center_horizontal"
               android:layout_marginStart="8dp"
               android:background="@drawable/main_dash_grid_button_bg"
               android:layout_marginTop="8dp"
               android:orientation="vertical">

               <ImageView
                   android:layout_marginTop="10dp"
                   android:contentDescription="@string/app_name"
                   android:src="@drawable/ic_attendance"
                   android:layout_width="100dp"
                   android:layout_height="100dp" />

               <TextView
                   android:layout_marginTop="10dp"
                   android:textColor="@color/black"
                   android:text="@string/employee_attendance_text"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />

           </LinearLayout>

       </LinearLayout>

   </LinearLayout>
</android.support.v4.widget.NestedScrollView>